# Pools

./: .gitignore  README.md
databasepool/: CMakeLists.txt  README.md  main.cpp
databasepool/include/: mysqlconn.h  mysqlconnpool.h
databasepool/src/: mysqlconn.cpp  mysqlconnpool.cpp
memorypool/: README.md
memorypool/src/: mempool  mempool.cpp
threadpool/: CMakeLists.txt  main.cpp
threadpool/include/: XTask.h  XThread.h  XThreadPool.h
threadpool/src/: XTask.cpp  XThread.cpp  XThreadPool.cpp
