cmake_minimum_required(VERSION 3.10)
project(databasepool)
set(ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${ROOTDIR}/include /usr/include/mysql)
file(GLOB SRC ${ROOTDIR}/src/*.cpp)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ROOTDIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${ROOTDIR}/bin)
add_library(connpool SHARED ${SRC})
add_executable(connpooltest ${ROOTDIR}/main.cpp)
target_link_libraries(connpooltest connpool)
target_link_libraries(connpooltest mysqlclient)
