cmake_minimum_required(VERSION 3.10)
project(threadpool)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
add_library(xthreadpool SHARED ${SRC})
add_executable(threadpooltest ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
target_link_libraries(threadpooltest xthreadpool)